update project to java 12 create suggestion metrics for placing blocks